--- a/libs/ConfigParser/sys.conf
+++ b/libs/ConfigParser/sys.conf
@@ -1,9 +1,9 @@
 [db]
-db_host = 127.0.0.1
-db_port = 22
-db_user = root
+db_host=127.0.0.1
+db_port=22
+db_user=root
+db_pass=root123
 
 [concurrent]
-thread = 10
-processor = 20
-
+thread  =    10
+processor =    20
